<?xml version="1.0"?>
<package format="2">
  <name>roblearn_robot</name>
  <version>0.0.0</version>
  <description>The roblearn_robot package</description>

  <maintainer email="nvidia@todo.todo">nvidia</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>kobuki_node</build_depend>
  <build_depend>urg_node</build_depend>
  <build_export_depend>kobuki_node</build_export_depend>
  <build_export_depend>urg_node</build_export_depend>
  <exec_depend>kobuki_node</exec_depend>
  <exec_depend>urg_node</exec_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
